# Dot

./: CMakeLists.txt  DotConfig.cmake  HTTPDotProtocol.hpp  README.md  dot.txt  most_useful_src.cpp  test.cpp
include/Dot/: BinaryReadOperation.hpp  ConnectionParams.hpp  Dot.hpp  DotEvent.hpp  DotEventManager.hpp  DotLooper.hpp  DotLooperEvent.hpp  DotOperation.hpp  DotOperationEvent.hpp  DotOperationEventManager.hpp  DotProtocol.hpp  Operation.hpp  ReadLooper.hpp  ReadLooperEvent.hpp  Reader.hpp  Writer.hpp
include/Dot/listeners/: OnConnected.hpp
src/: BinaryReadOperation.cpp  Dot.cpp  DotLooper.cpp  DotOperation.cpp  DotProtocol.cpp  Operation.cpp  ReadLooper.cpp  Reader.cpp  Writer.cpp
test/: CMakeLists.txt  Client_test.cpp  README.md  Server_test.cpp
